--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,9 +11,7 @@
   <main class="container my-5" style="max-width: 500px">
     <h1 class="mt-5 mb-5 text-center">Inicio de Sesión</h1>
 
-    <form class="row g-3" th:action="@{/validate}" th:object="${user}" method="post">
-
-
+    <form class="row g-3" th:action="@{/login}" th:object="${user}" method="post">
 
       <div class="col-md-12 mb-2">
         <label for="username" class="">Usuario:</label>
